--- a/rpcConsumer/pom.xml
+++ b/rpcConsumer/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
 
 
         <!--继承自 parent 中指明的，所以不用写版本号-->
@@ -37,6 +42,21 @@
         <dependency>
             <groupId>com.rpcT</groupId>
             <artifactId>rpcFacade</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rpcT</groupId>
+            <artifactId>rpcRegistry</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rpcT</groupId>
+            <artifactId>rpcProtocols</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rpcT</groupId>
+            <artifactId>rpcCore</artifactId>
         </dependency>
 
         <dependency>
