--- a/rpcProvider/pom.xml
+++ b/rpcProvider/pom.xml
@@ -50,6 +50,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.rpcT</groupId>
+            <artifactId>rpcRegistry</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rpcT</groupId>
+            <artifactId>rpcProtocols</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
